deployment/roles/corecontainers/templates/dashboard-ingress-external.yml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-exernal
  namespace: kube-system
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: kube-user
    # type of authentication
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - Kubernetes Dashboard'
    # remove authorization header. otherwise dashboard will reject requests
    ingress.kubernetes.io/auth-remove-header: "true"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx-external
  tls:
  - hosts:
    - kube.kreis3.com
    secretName: kube-kreis3-tls
  rules:
  - host: kube.kreis3.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kubernetes-dashboard
              port:
                number: 80
