deployment/roles/corecontainers/templates/dashboard-ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kube-system
  annotations:
    traefik.frontend.rule.type: PathPrefix
  labels:
    traffic-type: internal
spec:
  rules:
  - host: cube.kreis3.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard-exernal
  namespace: kube-system
  annotations:
  annotations:
    ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    ingress.kubernetes.io/auth-secret: kube-user
    # remove authorization header. otherwise dashboard will reject requests
    ingress.kubernetes.io/auth-remove-header: "true"
    traefik.frontend.rule.type: PathPrefix
  labels:
    traffic-type: external
spec:
  rules:
  - host: kube.kreis3.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 80
