deployment/roles/corecontainers/templates/traefik-external-service.yml
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service-external
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb
spec:
  selector:
    k8s-app: traefik-ingress-lb-external
  externalTrafficPolicy: Local
  ports:
    - protocol: TCP
      port: 80
      name: web
    - protocol: TCP
      port: 443
      name: https
    - protocol: TCP
      port: 8080
      name: admin
  type: LoadBalancer
  loadBalancerIP: 192.168.2.201
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress-lb-external
  namespace: kube-system
  annotations:
    ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    ingress.kubernetes.io/auth-secret: kube-user
    traefik.frontend.rule.type: PathPrefix
  labels:
    traffic-type: external
spec:
  rules:
  - host: traefik.kube.kreis3.com
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-ingress-service-external
          servicePort: admin
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: consul-ingress-lb-external
  namespace: kube-system
  annotations:
    ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    ingress.kubernetes.io/auth-secret: kube-user
    traefik.frontend.rule.type: PathPrefix
  labels:
    traffic-type: external
spec:
  rules:
  - host: consul.kube.kreis3.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kreis3-consul-ui
          servicePort: 80
