deployment/roles/corecontainers/templates/traefik-internal-service.yml
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb
spec:
  selector:
    k8s-app: traefik-ingress-lb
  externalTrafficPolicy: Local
  ports:
    - protocol: TCP
      port: 80
      name: web
    - protocol: TCP
      port: 443
      name: https
#    - protocol: TCP
#      port: 8080
#      name: admin
  type: LoadBalancer
  loadBalancerIP: 192.168.2.200
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-admin
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
    - protocol: TCP
      port: 8080
      name: admin
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress-lb
  namespace: kube-system
  labels:
    traffic-type: internal
spec:
  rules:
  - host: traefik.cube.kreis3.com
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-ingress-admin
          servicePort: admin
